<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">N-watch</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_pnumber">Phone Number</string>
    <string name="prompt_phone_number">Phone Number</string>
    <string name="prompt_first_Name">Enter your first name</string>
    <string name="prompt_last_Name">Enter your last name</string>
    <string name="prompt_sign_up_password">Enter Password</string>
    <string name="prompt_sign_up_email">Your E-mail goes here</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="prompt_sign_up_confirm_password">Confirm Password</string>
    <string name="prompt_address">Enter your Address</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_facebook">Sign in with Facebook</string>
    <string name="action_twitter">Sign in with Twitter</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_up_short">Sign up</string>
    <string name="action_button">Location</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_report_tag">ReportTagActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_google">Map</string>
    <string name="title_activity_sign_up">Sign up</string>
    <string name="title_activity_report">ReportActivity</string>
    <!--location-->
    <string name="empty_report_title">Enter a title for the report.</string>
    <string name="empty_report_description">Enter a description for the report.</string>
    <string name="empty_report_location">The location name field is .</string>
    <string name="empty_report_categories">Select at least one category.</string>
    <string name="hint_location">Enter location</string>
    <!--Add location-->
    <string name="title">Title</string>
    <string name="date">Date</string>
    <string name="photo">Photo</string>
    <string name="please_wait">Please wait...</string>
    <string name="choose_method">Choose Method</string>
    <string name="how_to_select_pic">Please choose how you would like to get the picture.</string>
    <string name="camera_option">Camera</string>
    <string name="gallery_option">Gallery</string>
    <string name="network_error">Network Error</string>
    <string name="network_error_msg">Network Error, please ensure you are connected to the Internet</string>
    <string name="file_system_error">File System Error</string>
    <string name="file_system_error_msg">File System Error, please ensure your save path is correct!</string>
    <string name="read_more">Read more...</string>
    <!-- empty latitude -->
    <string name="invalid_latitude">Invalid value entered for latitude. Eg valid value 3.4958585</string>
    <string name="invalid_longitude">Invalid value entered for longitude. Eg valid value -3.4958585</string>
    <!--General string-->
    <string name="add_report">Add Report</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="search_reports">Search reports...</string>
    <string name="search_maps">Search maps...</string>
    <string name="category">Category</string>
    <string name="location">Location</string>
    <string name="description">Description</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="date_and_time">Date and Time</string>
    <string name="enter_news_url">Enter news URL</string>
    <string name="added">Added</string>
    <string name="uploaded">Uploaded</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="verified">Verified</string>
    <string name="unverified">Unverified</string>
    <string name="remove">Remove</string>
    <string name="delete_report">Delete report</string>
    <string name="want_to_delete">Are you sure you want to delete?</string>
    <string name="failed">Failed</string>
    <string name="location_disabled">Location detection disabled</string>
    <string name="location_reenable">Would you like to visit Location &amp; Security settings to re-enable location detection?</string>
    <string name="select_category">Select Category</string>
    <string name="change_date">Change date</string>
    <string name="change_time">Change time</string>
    <string name="prompt_mesg">Choose a category to filter</string>
    <string name="photos">Photos</string>
    <string name="news">News</string>
    <string name="add_photo">Add Photo</string>
    <string name="save">Save</string>
    <string name="saving_">Saving...</string>
    <string name="saved">Saved</string>
    <string name="discard">Discard</string>
    <string name="cancel">Cancel</string>
</resources>
