<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_centerInParent="true"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:layout_width="match_parent">


    <ScrollView
        android:layout_marginTop="10dp"
        android:layout_marginLeft="25dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="RtlHardcoded,UselessParent">
    <LinearLayout
    android:background="#f0f4c3"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    android:paddingTop="8dp"
    android:orientation="vertical"
    android:layout_width="310dp"
    android:layout_height="wrap_content"
    tools:context="com.kingswhale.n_watch.SingUpActivity"
    android:id="@+id/linearLayout">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <EditText
        android:id="@+id/firstName"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:hint="@string/prompt_first_Name"
        android:imeActionId="@+id/signup"
        android:imeActionLabel="@string/action_sign_up_short"
        android:imeOptions="actionUnspecified"
        android:inputType="textPersonName"
        android:maxLines="1"
        android:singleLine="true"
        tools:ignore="Deprecated,RtlHardcoded" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <EditText
        android:id="@+id/lastName"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_last_Name"
        android:imeActionId="@+id/signup"
        android:imeActionLabel="@string/action_sign_up_short"
        android:imeOptions="actionUnspecified"
        android:inputType="textPersonName"
        android:maxLines="1"
        android:singleLine="true"
        tools:ignore="Deprecated,RtlHardcoded" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <EditText
        android:id="@+id/address"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_address"
        android:imeActionId="@+id/signup"
        android:imeActionLabel="@string/action_sign_up_short"
        android:imeOptions="actionUnspecified"
        android:inputType="textAutoComplete"
        android:maxLines="1"
        android:singleLine="true"
        tools:ignore="Deprecated,RtlHardcoded" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/email"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_sign_up_email"
            android:imeActionId="@+id/signup"
            android:imeActionLabel="@string/action_sign_up_short"
            android:imeOptions="actionUnspecified"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true"
            tools:ignore="Deprecated,RtlHardcoded,TextFields" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/password"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_sign_up_password"
            android:imeActionId="@+id/signup"
            android:imeActionLabel="@string/action_sign_up_short"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true"
            tools:ignore="Deprecated,RtlHardcoded,TextFields" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <EditText
        android:id="@+id/phoneNumber"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_phone_number"
        android:imeActionId="@+id/signup"
        android:imeActionLabel="@string/action_sign_up_short"
        android:imeOptions="actionUnspecified"
        android:inputType="phone"
        android:maxLines="1"
        android:singleLine="true"
        tools:ignore="Deprecated,RtlHardcoded,TextFields" />
    </android.support.design.widget.TextInputLayout>

        <CheckBox
        android:layout_marginLeft="25dp"
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="8dp"
        android:text="I agree all statement in"
        tools:ignore="HardcodedText,RtlHardcoded,RtlSymmetry" />

    <TextView
        android:id="@+id/Terms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="70dp"
        android:textSize="12sp"
        android:text="Terms and condition"
        android:textColor="@color/colorPrimary"
        tools:ignore="HardcodedText,RtlHardcoded,RtlSymmetry,SpUsage"/>
    <View
        android:layout_height="1dp"
        android:layout_width="match_parent"
        android:layout_marginLeft="72dp"
        android:layout_marginRight="70dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorPrimary"/>

    <EditText
        android:id="@+id/incident_location"
        style="@style/EditText.CapWords"
        android:hint="@string/hint_location"
        android:layout_marginBottom="16dp"/>


</LinearLayout>
    </ScrollView>
    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="20dp"
        android:layout_height="27dp"
        android:layout_gravity="center"
        android:onClick="location"
        android:textColor="#f0f4c3"
        android:text="@string/next"
        android:background="@color/colorPrimary"
        tools:ignore="ObsoleteLayoutParam" />

</LinearLayout>