<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@android:color/white"
    tools:context="com.kingswhale.n_watch.LoginActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:layout_marginTop="45dp">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon"
                android:layout_marginLeft="45dp"
                android:layout_marginBottom="16dp"
                android:elevation="10dp"
                android:layout_alignParentTop="true"
                android:layout_marginStart="110dp"
                tools:ignore="ContentDescription,ObsoleteLayoutParam,UnusedAttribute" />



            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    tools:ignore="Deprecated,RtlHardcoded" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <Button
                android:id="@+id/email_sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:background="@color/colorPrimary"
                android:layout_marginTop="20dp"
                android:textAlignment="center"
                android:text="@string/action_sign_in"
                android:textStyle="bold"
                tools:ignore="RtlHardcoded" />


                <View
                    android:layout_height="2dp"
                    android:layout_width="match_parent"
                    android:background="@color/colorPrimaryDark"
                    android:gravity="center"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="8dp"/>

                <Button
                    android:id="@+id/email_facebook_button"
                    style="?android:textAppearanceSmall"
                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:layout_marginTop="8dp"
                    android:background="#3b5998"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:drawableLeft="@drawable/ic_fb"
                    android:text="@string/action_facebook"
                    android:textStyle="bold"
                    tools:ignore="RtlHardcoded" />

                <Button
                    android:id="@+id/email_twitter_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_marginTop="5dp"
                    android:textColor="@android:color/white"
                    android:drawableLeft="@drawable/twtt"
                    android:background="#00aced"
                    android:layout_height="wrap_content"
                    android:textAlignment="gravity"
                    android:gravity="center"
                    android:text="@string/action_twitter"
                    android:textStyle="bold"
                    tools:ignore="RtlHardcoded" />

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/Sign_up"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/action_sign_up"
                    android:textColor="@color/colorPrimary"
                    android:textSize="15dp"
                    android:textStyle="bold"
                    tools:ignore="SpUsage" />

                <TextView
                    android:id="@+id/Forget_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="105dp"
                    android:text="Forget password"
                    android:textColor="@color/colorPrimary"
                    android:textSize="15dp"
                    android:textStyle="bold"
                    tools:ignore="HardcodedText,ObsoleteLayoutParam,RtlHardcoded,RtlSymmetry,SpUsage" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
